// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainContentReference Component > should render html content 1`] = `
<DocumentFragment>
  <div
    class="_typography_1kdaa_1 mainContentReference"
    data-size="md"
  >
    <h1
      class="__fce-header-1"
    >
      header 1
    </h1>
  </div>
</DocumentFragment>
`;

exports[`MainContentReference Component > should render markdown content 1`] = `
<DocumentFragment>
  <div
    class="_typography_1kdaa_1 mainContentReference"
    data-size="md"
  >
    <h1
      class="__fce-header-1"
    >
      header ## subheader ### subsubheader
    </h1>
  </div>
</DocumentFragment>
`;
